--- a/checkin.html
+++ b/checkin.html
@@ -178,7 +178,7 @@
 
     // ประกาศค่า URL ที่ใช้เชื่อมต่อกับ Web App
     const WEB_APP_MEMBER_URL = ' ';
-    const WEB_APP_URL = ' ';
+    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwlzWy3kpqqPEWmUboyjdVae4tAV86dSZA-fb9rxXAoFG-o6IyDit901dKM3UZ5wJoS/exec';
     const LIFF_ID = ' '; // Liff ID
 
     // ฟังก์ชันนี้จะถูกเรียกใช้เมื่อโหลดหน้าเว็บเสร็จสมบูรณ์
