--- a/checkin.html
+++ b/checkin.html
@@ -177,7 +177,7 @@
 <script>
 
     // ประกาศค่า URL ที่ใช้เชื่อมต่อกับ Web App
-    const WEB_APP_MEMBER_URL = ' ';
+    const WEB_APP_MEMBER_URL = 'https://script.google.com/macros/s/AKfycbzOOkAtYpyVnjl8vjgE09btSZAHg33INH7MuSSbuRE1wSndA4LTgO7nS_B5TRwCZgt1og/exec';
     const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwlzWy3kpqqPEWmUboyjdVae4tAV86dSZA-fb9rxXAoFG-o6IyDit901dKM3UZ5wJoS/exec';
     const LIFF_ID = ' '; // Liff ID
 
