--- a/member.html
+++ b/member.html
@@ -61,7 +61,7 @@
 
     <script>
         // URL ของ Web App และ LIFF ID
-        const WEB_APP_URL = ' ';
+        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzOOkAtYpyVnjl8vjgE09btSZAHg33INH7MuSSbuRE1wSndA4LTgO7nS_B5TRwCZgt1og/exec';
         const LIFF_ID = ' '; // LIFF ID
 
         let latestData = {};
