--- a/history.html
+++ b/history.html
@@ -57,7 +57,7 @@
 
         // URL ของ Web App ที่คุณ Deploy ไว้
         const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzOOkAtYpyVnjl8vjgE09btSZAHg33INH7MuSSbuRE1wSndA4LTgO7nS_B5TRwCZgt1og/exec';
-        const LIFF_ID = 'https://liff.line.me/2006854069-Er2NAYNm'; // Liff ID
+        const LIFF_ID = '2006854069-Er2NAYNm'; // Liff ID
 
         // จำนวนรายการที่จะแสดงต่อหน้า
         const itemsPerPage = 20;
