--- a/member.html
+++ b/member.html
@@ -62,7 +62,7 @@
     <script>
         // URL ของ Web App และ LIFF ID
         const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzOOkAtYpyVnjl8vjgE09btSZAHg33INH7MuSSbuRE1wSndA4LTgO7nS_B5TRwCZgt1og/exec';
-        const LIFF_ID = 'https://liff.line.me/2006854069-kB3wyAw2'; // LIFF ID
+        const LIFF_ID = '2006854069-kB3wyAw2'; // LIFF ID
 
         let latestData = {};
 
