--- a/register.html
+++ b/register.html
@@ -57,7 +57,7 @@
 	// URL ของ Web App ที่ใช้ในการลงทะเบียน
     const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzOOkAtYpyVnjl8vjgE09btSZAHg33INH7MuSSbuRE1wSndA4LTgO7nS_B5TRwCZgt1og/exec'; 
     // LIFF ID สำหรับการเชื่อมต่อกับ LINE
-    const LIFF_ID = 'https://liff.line.me/2006854069-bYvzDEz8'; // LIFF ID
+    const LIFF_ID = '2006854069-bYvzDEz8'; // LIFF ID
 
 // ฟังก์ชันเริ่มต้น LIFF SDK เมื่อโหลดหน้าเว็บ
 window.onload = function () {
