--- a/leave.html
+++ b/leave.html
@@ -136,8 +136,8 @@
     <script>
         // ประกาศค่า URL ที่ใช้เชื่อมต่อกับ Web App
         const WEB_MEMBER_APP_URL = 'https://script.google.com/macros/s/AKfycbzOOkAtYpyVnjl8vjgE09btSZAHg33INH7MuSSbuRE1wSndA4LTgO7nS_B5TRwCZgt1og/exec'; 
-        const WEB_APP_Leave_URL = ' '; 
-        const LIFF_ID = ' '; // Liff ID
+        const WEB_APP_Leave_URL = 'https://script.google.com/macros/s/AKfycbyTTafETXHmlQvgL6hd0mIZeuhSnEDYA7J0gJr6oOE9rjkP8QvOXWDH1JeQ1n6pNqWEzQ/exec'; 
+        const LIFF_ID = '2006854069-wgWrvnrY'; // Liff ID
 
         // เริ่มการทำงานเมื่อโหลดหน้าเว็บ
         window.onload = async function () {
